GOLD-82882 : Fixed overlapping panel issue. Checked-in changes on behalf of Kavya

--- a/jaffa-ria/source/html/js/extjs/resources/css/jaffaRia-rtl.css
+++ b/jaffa-ria/source/html/js/extjs/resources/css/jaffaRia-rtl.css
@@ -249,6 +249,7 @@ direction: rtl!important;
 /*field set*/
 .x-fieldset{
 	direction:rtl;
+    left: 0px !important;
 }
 /*grid header*/
 .x-grid3-header, .x-grid3-body {
@@ -930,6 +931,15 @@ text-align:left !important;
 /*************************************************************************************************************************
 ********************************************** Material Module Ends here ************************************************
 *************************************************************************************************************************/
+/*********************************************************
+***************Material Planning Module Starts here*******
+**********************************************************/
+#eiDetailPanel{
+   float: left;
+}
+/*********************************************************
+***************Material Planning Module Ends here*******
+**********************************************************/
 
 /*********************************************************
 ***************ASSETS MODULE STARTS HERE******************
